--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A82.Rmd
@@ -136,7 +136,7 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/A82_2,4-D_DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/GC_2,4-D Only_A82_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -145,17 +145,26 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("2,4-D dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("2,4-D dose (g ae ha"^-1, ")")),
      ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
      legendPos = c(4500, 3.0),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 
@@ -165,25 +174,21 @@ abline(v = 1065,
        col = "black")
 
 
-text(x = 3500, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)")),
+
+text(x = 3450, y = 1.5, 
+     labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)" ^A)),
      cex = 1.2,
      col = "black",
      font = 2)
 
 
-text(x = 3450, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)")),
+
+text(x = 3500, y = 1.3, 
+     labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)" ^B)),
      cex = 1.2,
      col = "black",
      font = 2)
 
-
-text(x = 2000, y = 1.1, 
-     labels = expression("p-value = 0.02"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
 
 
 text(x = 2500, y = 0.3, 
@@ -317,7 +322,7 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/A82_2,4-D_P450_DR_biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/GC_2,4-D+P450_A82_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -326,17 +331,26 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("2,4-D+P450 dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("2,4-D+P450 dose (g ae ha"^-1, ")")),
      ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
+     cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
      legendPos = c(4500, 3.0),
      lwd = 1)
+
+
+
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.3)
 
 
 
@@ -346,25 +360,21 @@ abline(v = 1065,
        col = "black")
 
 
-text(x = 3500, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "ambient = 109.9 ("%+-% "14.6)")),
+
+text(x = 3450, y = 1.5, 
+     labels = expression(paste("ED"[50] ~ "elevated = 22.9 ("%+-% "17.6)" ^A)),
      cex = 1.2,
      col = "black",
      font = 2)
 
 
-text(x = 3450, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "elevated = 22.9 ("%+-% "17.6)")),
+
+text(x = 3500, y = 1.3, 
+     labels = expression(paste("ED"[50] ~ "ambient = 109.9 ("%+-% "14.6)" ^B)),
      cex = 1.2,
      col = "black",
      font = 2)
 
-
-text(x = 2000, y = 1.1, 
-     labels = expression("p-value < 0.001"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
 
 
 text(x = 2500, y = 0.3, 
