--- a/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
@@ -136,7 +136,7 @@ compParm(model.LL4, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r eval=FALSE, include=FALSE}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/Fome_DR_counts.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/WiscWeeds/Waterhemp/Waterhemp PRE_Bill Stangel/Fome_DR_counts.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -150,12 +150,12 @@ plot(model.LL4,
      ylim = c(0, 15),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.0,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(680, 14),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 2.0,
+     legendPos = c(1000, 15.0),
+     lwd = 1.5)
 
 
 
@@ -164,41 +164,41 @@ points(x = c(summary(model.LL4)$coefficients[7, 1],
        y = c((summary(model.LL4)$coefficients[5, 1]/2), 
              (summary(model.LL4)$coefficients[6, 1]/2)),
        pch = 8,
-       cex = 1.3)
+       cex = 1.5)
 
 
-abline(v = 263, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#abline(v = 263, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
-text(x = 750, y = 7.0, 
-     labels = expression(paste("ED"[50] ~ "A92 = 132.0 ("%+-% "37.3)"^A)),
-     cex = 1.3,
-     col = "black",
-     font = 2)
+#text(x = 750, y = 7.0, 
+     #labels = expression(paste("ED"[50] ~ "A92 = 132.0 ("%+-% "37.3)"^A)),
+     #cex = 1.3,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 720, y = 6.2, 
-     labels = expression(paste("ED"[50] ~ "A66 = 13.5 ("%+-% "24.6)"^B)),
-     cex = 1.3,
-     col = "black",
-     font = 2)
+#text(x = 720, y = 6.2, 
+     #labels = expression(paste("ED"[50] ~ "A66 = 13.5 ("%+-% "24.6)"^B)),
+     #cex = 1.3,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 500, y = 5.4, 
-     labels = expression("p-value < 0.01"),
-     cex = 1.3,
-     col = "black",
-     font = 2)
+#text(x = 500, y = 5.4, 
+     #labels = expression("p-value < 0.01"),
+     #cex = 1.3,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 550, y = 3, 
-     labels = expression("1x rate: 263 g ai ha" ^-1),
-     cex = 1.2,
-     col = "black",
-     font = 2)
+#text(x = 550, y = 3, 
+     #labels = expression("1x rate: 263 g ai ha" ^-1),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
