--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D - Copy/MIs_2,4-D_GH.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D - Copy/MIs_2,4-D_GH.Rmd
@@ -56,7 +56,6 @@ model.LL4<- drm(biomass ~ rate, pop, fct = LL.4(), data = data_24D, type = "cont
 
 plot(fitted(model.LL4), residuals(model.LL4))
 
-
                 
 modelFit(model.LL4) # higher the p-value, better.
 
@@ -78,12 +77,16 @@ summary(model.LL4)
 
 ```{r, warning=FALSE}
 
-mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.5(), W1.3(), W1.4(), W2.4(), baro5()), linreg = T) 
-
-#LL.3 better option here (lower IC, which actually is AIC (default)). W1.3 could also be used, but since it is a asymmetrical model, I would give preference to LL.3 In symmetrical models, the parameter e and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter e does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. For asymmetrical models, ED50 should be estimated as "absolute" and not relative.
+getMeanFunctions() # To get the most used functions when fitting dose-response curves.
 
 
-model.W1.3<- drm(biomass ~ rate, pop, fct = W1.3(),  data = data_24D, type = "continuous")
+mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), LL.5(), W1.2(), W1.3(), W1.4(), W2.2(), W2.3(), W2.4(), BC.4(), BC.5(), LL2.2(), LL2.3(), LL2.3u(), LL2.4(), LL2.5(), AR.2(), AR.3(), MM.2(), MM.3(), baro5()), linreg = T)
+
+
+# Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
+
+
+model.W1.3 <- drm(biomass ~ rate, pop, fct = W1.3(),  data = data_24D, type = "continuous")
 
 plot(fitted(model.W1.3), residuals(model.W1.3))
 
@@ -94,40 +97,28 @@ summary(model.W1.3)
 
 
 
-model.LL.3<- drm(biomass ~ rate, pop, fct = LL.3(),  data = data_24D, type = "continuous")
-
-plot(fitted(model.LL.3), residuals(model.LL.3))
-
-
-modelFit(model.LL.3)
-
-
-summary(model.LL.3) # NO parameter c (lower limit). It means lower limit was set to zero.
-
-
-anova(model.LL3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+anova(model.W1.3, model.LL4) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
 
 
-## ED50 AND ED 90
+## ED50
 
 ```{r}
 
-ED(model.LL.3, c(50), type = "relative") 
-
-ED(model.LL.3, c(0.5), type = "absolute") 
+#ED(model.W1.3, c(50), type = "relative", interval = "delta")
 
 
+ED(model.W1.3, (summary(model.W1.3)$coefficients[5, 1] * 0.5), clevel = "A82", type = "absolute", interval = "delta")
 
-ED(model.W1.3, c(0.5), type = "absolute") 
+ED(model.W1.3, (summary(model.W1.3)$coefficients[6, 1] * 0.5), clevel = "A101", type = "absolute", interval = "delta")
 
+ED(model.W1.3, (summary(model.W1.3)$coefficients[7, 1] * 0.5), clevel = "A103", type = "absolute", interval = "delta")
 
+ED(model.W1.3, (summary(model.W1.3)$coefficients[8, 1] * 0.5), clevel = "A75", type = "absolute", interval = "delta")
 
-
-
-# Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
+# In this case, fitting relative and absolute resulted in the same ED50. Perhaps because W1.3 has a lower limit = 0. In simulations using the W1.4, then the relative and absolute ED50 are different. 
 
 ```
 
@@ -136,20 +127,36 @@ ED(model.W1.3, c(0.5), type = "absolute")
 
 ```{r}
 
-EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
+#EDcomp(model.W1.3, c(50, 50), type = "relative", interval = "none", reverse = F)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = F)
+
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[6, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
+       compMatch = c("A101", "A82"), type = "absolute", interval = "none", reverse = F)
+
+
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[7, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
+       compMatch = c("A103", "A82"), type = "absolute", interval = "none", reverse = F)
+
+
+EDcomp(model.W1.3, c((summary(model.W1.3)$coefficients[8, 1] * 0.5),
+                     (summary(model.W1.3)$coefficients[5, 1] * 0.5)), 
+       compMatch = c("A75", "A82"), type = "absolute", interval = "none", reverse = F)
+
+
 
 
 # Comparing b parameter (slope)
-compParm(model.LL3, strVal = "b", operator = "-")
+compParm(model.W1.3, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL3, strVal = "d", operator = "-")
+compParm(model.W1.3, strVal = "d", operator = "-")
 
-# Comparing e parameter (ED50)
-compParm(model.W1.3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+
+# Comparing e parameter (Infletion Point)
+compParm(model.W1.3, strVal = "e", operator = "-") # Remember that for assymetric models, the paramenter"e" does not reflect the ED50. 
 
 
 ```
